any missing updates

--- a/PasswordManager/PasswordManager.csproj
+++ b/PasswordManager/PasswordManager.csproj
@@ -49,7 +49,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UI\AboutPage.cs" />
     <Compile Include="UI\GUIManager.cs" />
+    <Compile Include="UI\LoginPage.cs" />
+    <Compile Include="UI\PasswordManager.cs" />
+    <Compile Include="UI\Sample.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
