Working logout button and home

--- a/PasswordManager/PasswordManager.csproj
+++ b/PasswordManager/PasswordManager.csproj
@@ -42,10 +42,10 @@
     <Reference Include="System" />
     <Reference Include="Xwt, Version=0.1.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Downloads\xwt-master\xwt-master\Xwt.Gtk\bin\Release\Xwt.dll</HintPath>
+      <HintPath>..\..\..\..\..\Downloads\xwt-master\xwt-master\Xwt\bin\Release\Xwt.dll</HintPath>
     </Reference>
     <Reference Include="Xwt.Gtk">
-      <HintPath>..\Xwt.Gtk.dll</HintPath>
+      <HintPath>..\..\..\..\..\Downloads\xwt-master\xwt-master\Xwt.Gtk\bin\Release\Xwt.Gtk.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
