added text of management page

--- a/PasswordManager/PasswordManager.csproj
+++ b/PasswordManager/PasswordManager.csproj
@@ -52,6 +52,7 @@
     <Compile Include="UI\AboutPage.cs" />
     <Compile Include="UI\GUIManager.cs" />
     <Compile Include="UI\LoginPage.cs" />
+    <Compile Include="UI\ManagementPage.cs" />
     <Compile Include="UI\PasswordManager.cs" />
     <Compile Include="UI\Sample.cs" />
   </ItemGroup>
