Fix AES encrypt/decrypt and separate DBManager class

--- a/PasswordManager/PasswordManager.csproj
+++ b/PasswordManager/PasswordManager.csproj
@@ -48,6 +48,9 @@
     </Reference>
     <Reference Include="glib-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f, processorArchitecture=MSIL" />
     <Reference Include="gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f, processorArchitecture=MSIL" />
+    <Reference Include="nunit.framework, Version=3.6.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.6.1\lib\net45\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
@@ -69,6 +72,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Backend\AES.cs" />
+    <Compile Include="Backend\Database.cs" />
     <Compile Include="Backend\DBManager.cs" />
     <Compile Include="Backend\PasswordHash.cs" />
     <Compile Include="UI\AboutPage.cs" />
